ros2_ws/log/build_2025-01-28_17-14-21/py_pubsub/stderr.log
  File "/home/matt/Documents/GitHub/Rover-Unity/ros2_ws/install/py_pubsub/lib/python3.10/site-packages/py_pubsub/auton_controller.py", line 133
    self.get_logger().info(f'Thus the offset is: ' str(18.0 - roll_degrees))
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

